--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A basic HTML / SCSS boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "node-sass -w scss -o css",
+    "server": "live-server",
+    "watch": "npm-run-all --parallel sass server"
   },
   "repository": {
     "type": "git",
@@ -18,8 +21,8 @@
   "homepage": "https://github.com/mukeshkumar108/basic-boilerplate#readme",
   "devDependencies": {
     "live-server": "^1.2.1",
+    "modern-css-reset": "^1.4.0",
     "node-sass-chokidar": "^1.5.0",
-    "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5"
   }
 }
